src/test/deca/context/invalid/class_pass2_1.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 2 (declaration d attribus)
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025



class B {
    C c;
}
